# OC

./: README.md
cp/: CMakeLists.txt  cp.docx  main.cpp
cp/include/: Allocator.h  BinaryBuddyAllocator.h  BuddyAllocator.h
cp/src/: BinaryBuddyAllocator.cpp  BuddyAllocator.cpp
cp/test/: test_cp.cpp
lab1/: CMakeLists.txt  main.cpp  readme.md
lab1/docs/: 1.docx
lab1/include/: parent.h
lab1/src/: child1.cpp  parent.cpp
lab1/test/: test_1.cpp
lab2/: 2.docx  CMakeLists.txt  main.cpp
lab2/include/: game.h
lab2/src/: game.cpp
lab2/test/: test_2.cpp
lab3/: 3.docx  CMakeLists.txt  main.cpp
lab3/include/: parent.h
lab3/src/: child1.cpp  child2.cpp  parent.cpp
lab3/test/: test_3.cpp
lab4/: 4.docx  CMakeLists.txt
lab4/include/: math_interface.h
lab4/src/: main1.cpp  main2.cpp  math1.cpp  math2.cpp
lab4/test/: test_4.cpp
lab5-7/: 5-7.docx  CMakeLists.txt
lab5-7/include/: network.h  node.h
lab5-7/src/: child.cpp  main.cpp
lab5-7/test/: test_5-7.cpp
lab8/: 8.docx
